Update and rename irunn.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LUTFI Media Sosial</title>
+    <title>Nisa Media Sosial</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link ke file CSS untuk styling -->
     <style>
         body {
